# LearnOpenGL

./: CMakeLists.txt  main.cpp  shaders.h
shaders/: shaders.h  vertex_shader.vs
structs/: shapes.h
